--- a/src/pages/recovery-password/recovery-password.scss
+++ b/src/pages/recovery-password/recovery-password.scss
@@ -1,7 +1,72 @@
 page-recovery-password {
 
+	.item-md {
+    padding-left: 2px;
+    padding-right: 2px;
+    position: relative;
+    font-size: 1.6rem;
+    font-weight: normal;
+    text-transform: none;
+    color: #000;
+    background-color: #fff;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner, .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
+	border-bottom-color: transparent;
+	-webkit-box-shadow: inset 0 -1px 0 0 transparent;
+	box-shadow: inset 0 -1px 0 0 transparent;
+}
+
+.wi132Tam{
+	width: 132%
+}
+
+.marbutt{
+	margin-bottom: 10%;
+}
+.colWhite{
+	color: white;
+}
+
+.item-input .label-md, .item-select .label-md, .item-datetime .label-md {
+	color: white;
+	font-weight: bold;
+	font-size: 14px;
+	text-align: center;
+}
 	.logo {
-		width: 100%;
+		width: 70%;
 		display: unset;
-	  }
+	}
+		
+	.center {
+    margin: auto;
+    text-align: center;
+	}
+	
+	.imgBackground {
+    background-image: url(http://subirimagen.me/uploads/20180921121235.png);
+    background-repeat: initial;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+	}
+	
+	ion-input, ion-textarea {
+    border: 0.5px #9669fc solid !important;
+		border-radius: 12px !important;
+		background: white;
+	}
+
+	.item-md.item-block .item-inner {
+    padding-right: 0px;
+    border-bottom: 0px solid #dedede;
+}
+	
+	.backTransparent{
+		background: transparent;
+	}
 }
